# ogx

./: CONTRIBUTING.md  Cargo.toml  README.md  publish.sh  update-versions.sh  upgrade-deps.sh
cargo-ogx/: Cargo.toml  README.md
cargo-ogx/src/: main.rs  manifest.rs  metadata.rs  ogx_pg_sys_stub.rs
cargo-ogx/src/command/: connect.rs  init.rs  install.rs  mod.rs  new.rs  ogx.rs  package.rs  run.rs  schema.rs  start.rs  status.rs  stop.rs  test.rs  version.rs
cargo-ogx/src/templates/: cargo_toml  control  lib_rs
ogx/: Cargo.toml
ogx-examples/: README.md
ogx-examples/aggregate/: Cargo.toml  README.md  aggregate.control
ogx-examples/aggregate/src/: lib.rs
ogx-examples/arrays/: Cargo.toml  arrays.control
ogx-examples/arrays/src/: lib.rs
ogx-examples/bad_ideas/: Cargo.toml  bad_ideas.control
ogx-examples/bad_ideas/src/: lib.rs
ogx-examples/bgworker/: Cargo.toml  README.md  bgworker.control
ogx-examples/bgworker/src/: lib.rs
ogx-examples/bytea/: Cargo.toml  bytea.control
ogx-examples/bytea/src/: lib.rs
ogx-examples/composite_type/: Cargo.toml  README.md  composite_type.control
ogx-examples/composite_type/src/: lib.rs
ogx-examples/custom_sql/: Cargo.toml  custom_sql.control
ogx-examples/custom_sql/src/: lib.rs
ogx-examples/custom_types/: Cargo.toml  README.md  custom_types.control
ogx-examples/custom_types/src/: complex.rs  fixed_size.rs  generic_enum.rs  hstore_clone.rs  lib.rs
ogx-examples/errors/: Cargo.toml  errors.control
ogx-examples/errors/src/: lib.rs
ogx-examples/nostd/: Cargo.toml  nostd.control
ogx-examples/nostd/src/: lib.rs
ogx-examples/operators/: Cargo.toml  README.md  operators.control
ogx-examples/operators/src/: derived.rs  lib.rs
ogx-examples/schemas/: Cargo.toml  README.md  schemas.control
ogx-examples/schemas/src/: lib.rs
ogx-examples/shmem/: Cargo.toml  shmem.control
ogx-examples/shmem/src/: lib.rs
ogx-examples/spi/: Cargo.toml  README.md  spi.control
ogx-examples/spi/src/: lib.rs
ogx-examples/spi_srf/: Cargo.toml  README.md  spi_srf.control
ogx-examples/spi_srf/src/: lib.rs
ogx-examples/srf/: Cargo.toml  srf.control
ogx-examples/srf/src/: lib.rs
ogx-examples/strings/: Cargo.toml  strings.control
ogx-examples/strings/src/: lib.rs
ogx-examples/triggers/: Cargo.toml  triggers.control
ogx-examples/triggers/src/: lib.rs
ogx-examples/versioned_so/: Cargo.toml  versioned_so.control
ogx-examples/versioned_so/src/: lib.rs
ogx-macros/: Cargo.toml  README.md
ogx-macros/src/: lib.rs  operators.rs
ogx-pg-config/: Cargo.toml  README.md
ogx-pg-config/src/: lib.rs  path_methods.rs
ogx-pg-sys/: Cargo.toml  README.md  build.rs
ogx-pg-sys/cshim/: Makefile  ogx-cshim.c
ogx-pg-sys/src/: lib.rs  og3.rs
ogx-pg-sys/src/submodules/: guard.rs  mod.rs  polyfill.rs  setjmp.rs  sql_translatable.rs
ogx-tests/: .gitignore  Cargo.toml  README.md  ogx_tests.control
ogx-tests/src/: framework.rs  lib.rs
ogx-tests/src/tests/: aggregate_tests.rs  anyarray_tests.rs  array_tests.rs  attributes_tests.rs  bytea_tests.rs  cfg_tests.rs  datetime_tests.rs  default_arg_value_tests.rs  derive_pgtype_lifetimes.rs  enum_type_tests.rs  fcinfo_tests.rs  guc_tests.rs  heap_tuple.rs  hooks_tests.rs  inet_tests.rs  internal_tests.rs  json_tests.rs  lifetime_tests.rs  log_tests.rs  memcxt_tests.rs  mod.rs  name_tests.rs  numeric_tests.rs  og_extern_tests.rs  og_type_tests.rs  ogbox_tests.rs  pg_try_tests.rs  schema_tests.rs  spi_tests.rs  srf_tests.rs  struct_type_tests.rs  trigger_tests.rs  uuid_tests.rs  variadic_tests.rs  xact_callback_tests.rs  xid64_tests.rs  zero_datum_edge_cases.rs
ogx-utils/: Cargo.toml  README.md
ogx-utils/src/: lib.rs  rewriter.rs
ogx-utils/src/sql_entity_graph/: control_file.rs  mapping.rs  mod.rs  ogx_attribute.rs  ogx_sql.rs  positioning_ref.rs  used_type.rs
ogx-utils/src/sql_entity_graph/aggregate/: aggregate_type.rs  entity.rs  mod.rs  options.rs
ogx-utils/src/sql_entity_graph/extension_sql/: entity.rs  mod.rs
ogx-utils/src/sql_entity_graph/metadata/: entity.rs  function_metadata.rs  mod.rs  phantomdata_ext.rs  return_variant.rs  sql_translatable.rs
ogx-utils/src/sql_entity_graph/og_enum/: entity.rs  mod.rs
ogx-utils/src/sql_entity_graph/og_extern/: argument.rs  attribute.rs  mod.rs  operator.rs  returning.rs  search_path.rs
ogx-utils/src/sql_entity_graph/og_extern/entity/: argument.rs  mod.rs  operator.rs  returning.rs
ogx-utils/src/sql_entity_graph/og_hash/: entity.rs  mod.rs
ogx-utils/src/sql_entity_graph/og_ord/: entity.rs  mod.rs
ogx-utils/src/sql_entity_graph/og_trigger/: attribute.rs  entity.rs  mod.rs
ogx-utils/src/sql_entity_graph/og_type/: entity.rs  mod.rs
ogx-utils/src/sql_entity_graph/schema/: entity.rs  mod.rs
ogx-utils/src/sql_entity_graph/to_sql/: entity.rs  mod.rs
ogx/src/: aggregate.rs  array.rs  callbacks.rs  enum_helper.rs  fcinfo.rs  guc.rs  heap_tuple.rs  hooks.rs  htup.rs  inoutfuncs.rs  itemptr.rs  iter.rs  layout.rs  lib.rs  list.rs  log.rs  memcxt.rs  misc.rs  namespace.rs  ogbox.rs  prelude.rs  rel.rs  shmem.rs  spi.rs  tupdesc.rs  varlena.rs  xid.rs
ogx/src/datum/: anyarray.rs  anyelement.rs  array.rs  date.rs  from.rs  inet.rs  internal.rs  into.rs  item_pointer_data.rs  json.rs  mod.rs  numeric.rs  time.rs  time_stamp.rs  time_stamp_with_timezone.rs  time_with_timezone.rs  uuid.rs  varlena.rs
ogx/src/trigger_support/: mod.rs  og_trigger.rs  og_trigger_error.rs  og_trigger_level.rs  og_trigger_option.rs  og_trigger_safe.rs  og_trigger_when.rs
