[package]
name = "ogx-pg-config"
version = "0.1.0"
authors = ["Heguofeng<hgf199@126.com>"]
license = "MIT"
description = "A openGauss pg_config wrapper for 'ogx'"
homepage = "https://gitee.com/Nelson-He/ogx"
repository = "https://gitee.com/Nelson-He/ogx"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
eyre = "0.6.8"
owo-colors = "3.5.0"
serde = { version = "1.0.146", features = [ "derive" ] }
serde_derive = "1.0.146"
serde_json = "1.0.87"
toml = "0.5.9"
url = "2.3.1"
