[package]
name = "ogx-pg-sys"
version = "0.1.0"
authors = ["Heguofeng<hgf199@126.com>"]
license = "MIT"
description = "Generated Rust bindings for openGauss internals, for use with 'ogx'"
homepage = "https://gitee.com/Nelson-He/ogx"
repository = "https://gitee.com/Nelson-He/ogx"
documentation = "https://docs.rs/ogx-pg-sys"
readme = "README.md"
edition = "2021"

[features]
default = [ ]
og3 = [ ]

[package.metadata.docs.rs]
features = ["og3"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
memoffset = "0.6.5"
once_cell = "1.15.0"
ogx-macros = { path = "../ogx-macros/", version = "=0.1.0" }
ogx-utils = { path = "../ogx-utils/", version = "=0.1.0" }
# polyfill until #![feature(strict_provenance)] stabilizes
sptr = "0.3"

[build-dependencies]
bindgen = { version = "0.60.1", default-features = false, features = ["runtime"] }
ogx-pg-config= { path = "../ogx-pg-config/", version = "=0.1.0" }
ogx-utils = { path = "../ogx-utils/", version = "=0.1.0" }
proc-macro2 = "1.0.47"
quote = "1.0.21"
rayon = "1.5.3"
syn = { version = "1.0.103", features = [ "extra-traits", "full", "fold", "parsing" ] }
eyre = "0.6.8"
shlex = "1.1.0" # shell lexing, also used by many of our deps
