[package]
name = "ogx-tests"
version = "0.1.0"
authors = ["Heguofeng<heguofeng@openeuler.sdh>"]
license = "MIT"
description = "Test framework for 'ogx'-based openGauss extensions"
homepage = "https://gitee.com/Nelson-He/ogx"
repository = "https://gitee.com/Nelson-He/ogx"
documentation = "https://docs.rs/ogx-tests"
readme = "README.md"
edition = "2021"

[lib]
crate-type = [ "cdylib", "lib" ]

[features]
default = [ ]
og3 = [ "ogx/og3" ]
og_test = [ ]

[package.metadata.docs.rs]
features = ["og3"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
owo-colors = "3.5.0"
once_cell = "1.15.0"
libc = "0.2.135"
ogx-macros = { path = "../ogx-macros", version = "=0.1.0" }
ogx-pg-config = { path = "../ogx-pg-config", version = "=0.1.0" }
ogx-utils = { path = "../ogx-utils", version = "=0.1.0" }
postgres = "0.19.4" #TODO: fix it using openGauss driver
regex = "1.6.0"
serde = "1.0.146"
serde_json = "1.0.87"
shutdown_hooks = "0.1.0"
time = "0.3.15"
eyre = "0.6.8"
thiserror = "1.0"

[dependencies.ogx]
path = "../ogx"
default-features = false
version = "=0.1.0"
