[package]
name = "shmem"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["og3"]
og3 = ["ogx/og3", "ogx-tests/og3" ]
og_test = []

[dependencies]
heapless = "0.7.16"
ogx = { path = "../../ogx", default-features = false }
serde = { version = "1.0.146", features = [ "derive" ] }

[dev-dependencies]
ogx-tests = { path = "../../ogx-tests" }

# uncomment these if compiling outside of 'ogx'
# [profile.dev]
# panic = "unwind"
# lto = "thin"

# [profile.release]
# panic = "unwind"
# opt-level = 3
# lto = "fat"
# codegen-units = 1
